RESOLVED FIXED303230
[WPE] WebKitImage uses incorrect color type when encoding
https://bugs.webkit.org/show_bug.cgi?id=303230
Summary [WPE] WebKitImage uses incorrect color type when encoding
Simon Pena
Reported 2025-11-28 05:00:25 PST
WebKitImage implements the GLoadableIcon interface, and in load uses Skia to encode its bytes into a PNG image. When a WebKit::WebImage is created, it uses PixelFormat::BGRA8, but WebKitImage assumed RGBA8 was used, and instructed Skia accordingly.
Attachments
Simon Pena
Comment 1 2025-11-28 05:07:35 PST
EWS
Comment 2 2025-12-01 02:55:41 PST
Committed 303675@main (bd53bc0caa62): <https://commits.webkit.org/303675@main> Reviewed commits have been landed. Closing PR #54551 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.