[WPE] WebKitImage uses incorrect color type when encoding https://bugs.webkit.org/show_bug.cgi?id=303230

Reviewed by Adrian Perez de Castro and Carlos Garcia Campos.

Align WebKitImage with WebKit::WebImage, using BGRA8. This fixes PNG
encoding in WebKitImage load-related functions. Additionally rename
webkit_image_as_rgba_bytes into webkit_image_as_bytes, to stop implying
any pixel format.

Test: Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebKitImage.cpp
* Source/WebKit/UIProcess/API/glib/WebKitImage.cpp:
(webkit_image_as_bytes):
(webkitImageHash):
(webkitImageEqual):
(webkitImageLoad):
(webkit_image_as_rgba_bytes): Deleted.
* Source/WebKit/UIProcess/API/glib/WebKitImage.h.in:
* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
* Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebKitImage.cpp:
(testWebKitImagePropertiesConstruct):

Canonical link: https://commits.webkit.org/303675@main